// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-button-group> Component basic usage 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="secondary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            About Pega
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 3 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 4 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 5 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button hierarchy="primary">
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component icon only button group 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="xsmall"
                   hierarchy="primary"
                   border-radius="full"
                   icon-only
      >
        <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--primary c-bolt-button--border-radius-full c-bolt-button--center c-bolt-button--icon-only">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Example
          </ssr-keep>
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__icon c-bolt-button__icon-sizer"
          >
            <svg slot="after"
                 class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <path fill="#151619"
                    fill-rule="evenodd"
                    d="M18.6 16l9.8-9.8c.7-.7.7-1.9 0-2.6s-1.9-.7-2.6 0L16 13.4 6.2 3.5c-.7-.7-1.9-.7-2.6 0s-.7 1.9 0 2.6l9.8 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.5.8.7 1.3.7s1-.2 1.3-.6l9.8-9.8 9.8 9.8c.3.3.8.6 1.3.6s1-.2 1.3-.6c.7-.7.7-1.9 0-2.6z"
                    clip-rule="evenodd"
              >
              </path>
            </svg>
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="xsmall"
                   hierarchy="secondary"
                   icon-only
      >
        <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--icon-only">
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            About Pega
          </ssr-keep>
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__icon c-bolt-button__icon-sizer"
          >
            <svg slot="after"
                 class="e-bolt-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <path fill="#151619"
                    fill-rule="evenodd"
                    d="M18.6 16l9.8-9.8c.7-.7.7-1.9 0-2.6s-1.9-.7-2.6 0L16 13.4 6.2 3.5c-.7-.7-1.9-.7-2.6 0s-.7 1.9 0 2.6l9.8 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.5.8.7 1.3.7s1-.2 1.3-.6l9.8-9.8 9.8 9.8c.3.3.8.6 1.3.6s1-.2 1.3-.6c.7-.7.7-1.9 0-2.6z"
                    clip-rule="evenodd"
              >
              </path>
            </svg>
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;
